tests/pos/synthetics.scala
case class C(x: Int, var y: String) {

}

