tests/neg/i13815/Box_1.scala
case class Box(i: Int, s: String)
